# ggonnx

./: .gitignore  CMakeLists.txt  README.md
src/: expected.hpp  ggml_execution_provider.cc  meta_eval.cpp  meta_eval.hpp  ops.cpp  ops.hpp
src/inner/: helpers.hpp  ort_api_helpers.cc  ort_api_helpers.hpp
tests/: conftest.py  test_integration.py  test_onnx_node_conformance.py  test_runtime.py  test_support.py
tools/: benchmark_mosaic.py  ggonnx_node_probe.py  ggonnx_op_report.py  ggonnx_runner.cc  mosaic_demo.py  onnx_node_discover.py
